--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,10 +39,11 @@ dependencies {
     compile project(':androidjokeslib')
     compile project(path: ':jokesengine', configuration: 'android-endpoints')
     compile 'com.android.support:appcompat-v7:22.2.1'
-    compile 'com.google.android.gms:play-services:8.3.0'
-    compile 'com.google.android.gms:play-services-ads:8.3.0'
-    compile 'com.google.android.gms:play-services-identity:8.3.0'
-    compile 'com.google.android.gms:play-services-gcm:8.3.0'
     compile 'com.android.support:design:22.2.1'
     compile 'com.android.support:support-v4:22.2.1'
+
+    compile 'com.google.android.gms:play-services:8.3.0'
+    freeCompile 'com.google.android.gms:play-services-ads:8.3.0'
+    freeCompile 'com.google.android.gms:play-services-identity:8.3.0'
+    freeCompile 'com.google.android.gms:play-services-gcm:8.3.0'
 }
