removed play services dependency for paid version

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,7 @@ dependencies {
     compile 'com.android.support:design:22.2.1'
     compile 'com.android.support:support-v4:22.2.1'
 
-    compile 'com.google.android.gms:play-services:8.3.0'
-
+    freeCompile 'com.google.android.gms:play-services:8.3.0'
     freeCompile 'com.google.android.gms:play-services-ads:8.3.0'
     freeCompile 'com.google.android.gms:play-services-identity:8.3.0'
     freeCompile 'com.google.android.gms:play-services-gcm:8.3.0'
